# project_bonker

./: Cargo.toml  README.md
data/shaders/: blit.wgsl  compute.wgsl  compute_copy_vertices.wgsl  shader.wgsl  triangle_shader_camera_vertices.wgsl  triangle_shader_vertices.wgsl
libs/common/: Cargo.toml
libs/common/src/: lib.rs
libs/input/: Cargo.toml
libs/input/src/: lib.rs
libs/mesh_loader/: Cargo.toml
libs/mesh_loader/src/: cube.rs  lib.rs
libs/renderer/: Cargo.toml
libs/renderer/src/: blit_to_backbuffer.rs  compute_system.rs  compute_system_copy_vertices.rs  lib.rs  triangle_system.rs  triangle_system_camera_vertices.rs  triangle_system_vertices.rs
libs/window/: Cargo.toml
libs/window/src/: lib.rs
src/: main.rs
