[package]
name = "project_bonker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
input = { path = "libs/input" }
window = { path = "libs/window" }

cgmath = "0.18"
env_logger = "0.10"
winit = { version = "0.27", default-features = false }
