[package]
name = "project_bonker"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 1

[dependencies]
common = { path = "libs/common" }
input = { path = "libs/input" }
renderer = { path = "libs/renderer" }
#window = { path = "libs/window" }

env_logger =  { version = "0.10", default-features=false, features=["humantime"] }
log = "0.4"
pollster = "0.3.0"

glam = "0.24.0"
#winit = { version = "0.28.1", default-features = false, features = ["x11"] }

[target.'cfg(windows)'.dependencies]
winit = { version = "0.28.5" }

[target.'cfg(unix)'.dependencies]
winit = { version = "0.28.5", default-features = false, features = ["x11"] }

gltf = "1.0"