[package]
name = "input"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(windows)'.dependencies]
winit = { version = "0.28.5" }

[target.'cfg(unix)'.dependencies]
winit = { version = "0.28.5", default-features = false, features = ["x11"] }
