[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }


bytemuck = { version = "1.13", features = [ "derive" ] }
pollster = "0.2.5"
wgpu = { version  = "0.15" }
#winit = { version = "0.27.5" } #, default-features = false }
raw-window-handle = "0.5.0"


glam = "0.22"

#adds a lot of includes
image = { version = "0.24.5", default-features = false, features = [ "png"] }
#png = "0.17.7"
