[package]
name = "window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = { path = "../input" }
winit = { version = "0.27", default-features = false, features = ["x11"] }
env_logger = "0.10"
log = "0.4"
wgpu = { version  = "0.14.2", default-features = false }
pollster = "0.2.5"