[package]
name = "window"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = { path = "../input" }
renderer = { path = "../renderer" }

#env_logger = "0.10"
log = "0.4"
pollster = "0.2.5"
winit = { version = "0.27", default-features = false }
